# recurrent-rebels

./: README.md
igor-wip/wk1/: irises.ipynb
igor-wip/wk1/iris_web_server/: .gitignore  Cargo.toml
igor-wip/wk1/iris_web_server/src/: classification.rs  main.rs
week1/: Learning.py  Model.py  api.py  input.py  learn.py  main.py
week1/alex/: Iris.ipynb  Network.ipynb  Weight98.67.txt  Wights99.33.txt  new-workspace.jupyterlab-workspace
week1/alex/.ipynb_checkpoints/: 99.33_on_15_layers-checkpoint.json  Iris-checkpoint.ipynb
week1/daniel-and-paul/: nn.ipynb
week1/daniel-and-paul/.ipynb_checkpoints/: nn-checkpoint.ipynb
week1/paul/: nn.ipynb
week1/paul/.ipynb_checkpoints/: nn-checkpoint.ipynb
