[package]
name = "iris_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15.3"
serde_derive = "1.0"
lazy_static = "1.4.0"
log = "0.4"
simple_logger = "1.0" # For easy setup of the logger